--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
-  flutter_native_splash: ^2.3.2
+  # flutter_native_splash: ^2.3.2
   get: ^4.6.5
   liquid_swipe: ^3.1.0
   smooth_page_indicator: ^1.1.0
   flutter_otp_text_field: ^1.1.1
+  firebase_core: ^2.16.0
+
 
 dev_dependencies:
   flutter_test:
@@ -53,17 +55,17 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
-flutter_native_splash:
-  color: "#f7f6f1"
-  color_dark: "#272727"
-  image: assets/images/flutter.png
-  image_dark: assets/images/flutter.png
+# flutter_native_splash:
+#   color: "#f7f6f1"
+#   color_dark: "#272727"
+#   image: assets/images/flutter.png
+#   image_dark: assets/images/flutter.png
 
-  android_12:
-    image: assets/images/flutter.png
-    icon_background_color: "#f7f6f1"
-    image_dark: assets/images/flutter.png
-    icon_background_color_dark: "#272727"
+#   android_12:
+#     image: assets/images/flutter.png
+#     icon_background_color: "#f7f6f1"
+#     image_dark: assets/images/flutter.png
+#     icon_background_color_dark: "#272727"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
